--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
             <a href="https://instagram.com/marcelopaludetto"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Gabi.jpg" alt="foto da gabi">
-            <h3 class="estudante-nome">Gabriela</h3>
+            <img class="estudante-imagem" src="Cleide.jpg" alt="foto da gabi">
+            <h3 class="estudante-nome">Cleide</h3>
             <a href="https://github.com/GabrielaM-L"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/gabriela-marcomini-de-lima/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/gabriela_marcomini/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Liz.jpg" alt="foto da lizandra">
-            <h3 class="estudante-nome">Lizandra</h3>
+            <img class="estudante-imagem" src="Lourdes.jpg" alt="foto da lizandra">
+            <h3 class="estudante-nome">Lourdes</h3>
             <a href="https://github.com/LizandraDuarte40"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/lizandrarlm-duarte/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/lizandrarlm"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
@@ -54,15 +54,15 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Joice.jpg" alt="foto da joice">
-            <h3 class="estudante-nome">Joice</h3>
+            <img class="estudante-imagem" src="José.jpg" alt="foto da joice">
+            <h3 class="estudante-nome">José</h3>
             <a href="https://github.com/JoiceAlura"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/joicebarbaresco/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/joicebarbaresco/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Maria.jpg" alt="foto da maria">
-            <h3 class="estudante-nome">Maria</h3>
+            <img class="estudante-imagem" src="Estela.jpg" alt="foto da maria">
+            <h3 class="estudante-nome">Estela</h3>
             <a href="https://github.com/MagePSR"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/mariageovanna"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
