--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p class="escola-texto-um">O colégio é super aconchegante e arejado.</p>
             <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
         </div>
-        <img class="escola-imagem" src="Formula-bro.png" alt="imagem que representa uma professora em sala de aula">
+        <img class="escola-imagem" src="imagemanimal.jpg" alt="imagem que representa uma professora em sala de aula">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes?</h2>
@@ -68,8 +68,8 @@
             <a href="https://www.instagram.com/magpsr/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Olivia.jpg" alt="foto da olhe">
-            <h3 class="estudante-nome">Olivia</h3>
+            <img class="estudante-imagem" src="Cleiton.jpg" alt="foto da olhe">
+            <h3 class="estudante-nome">Cleiton</h3>
             <img class="estudante-icone" src="github.png" alt="icone github">
             <a href="https://www.linkedin.com/in/olhe/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://github.com/olhe12"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
@@ -77,15 +77,15 @@
         <span></span>
         <span></span>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Rafa.jpg" alt="foto da rafa">
-            <h3 class="estudante-nome">Rafaela</h3>
+            <img class="estudante-imagem" src="Osmar.jpg" alt="foto da rafa">
+            <h3 class="estudante-nome">Osmar</h3>
             <a href="https://github.com/rafaelamunhoz12"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="http://linkedin.com/in/rafaela-felix-munhoz-oliveira-02160a10a"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/rafafmo/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="Thais.jpg" alt="foto da thais">
-            <h3 class="estudante-nome">Thais</h3>
+            <img class="estudante-imagem" src="Flora.jpg" alt="foto da thais">
+            <h3 class="estudante-nome">Flora</h3>
             <a href="https://github.com/Thaispianucci"><img class="estudante-icone" src="github.png" alt="icone github"></a>
             <a href="https://www.linkedin.com/in/thais-pianucci-benedicto-54a9a416/"><img class="estudante-icone" src="linkedin.png" alt="icone linkedin"></a>
             <a href="https://www.instagram.com/thaispianucci/"><img class="estudante-icone" src="instagram.png" alt="icone instagram"></a>
